--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="wrapper">
       <img src="hexcore.png" alt="HEXCORE">
-      <p>THESE ARE 11 LEGENDARY GUY 🗣️🔥</p>
+      <p>THESE ARE 11 LEGENDARY GUYS 🗣️🔥</p>
       <ul>
         <li><a href="https://www.instagram.com/lennarialn">@lennarialn</a></li>
         <li><a href="https://www.instagram.com/rvnaslii">@rvnaslii</a></li>
